Thesis: final remarks

--- a/thesis/tex/cd_content.tex
+++ b/thesis/tex/cd_content.tex
@@ -1,1 +1,6 @@
 \chapter{Zawartość płyty CD}
+\JP{\begin{enumerate}
+\item Hobbit: Pustkowie Smauga (1080p, BrRip)
+\item Hobbit: Niezwykła podróż (1080p, BrRip)
+\item i nie, to nie są sugestie tego co powinno być na płycie, a tylko przypomnienie, że ten rozdział też trzeba wypełnić!
+\end{enumerate}}
