--- a/thesis/tex/summary.tex
+++ b/thesis/tex/summary.tex
@@ -1,1 +1,2 @@
 \chapter{Podsumowanie}
+\JP{Wtyczka jest wspaniała, jesteśmy zachwyceni i planujemy zbić dzięki GUI4PDDL kokosy, a na Wydział nowi studenci będą walić drzwiami i oknami, żeby uczyć się o automatycznym planowaniu. (Hint: to jest za krótkie i zbyt kwiecistym stylem napisane, więc niestety nie wystarczy.)}
