--- a/thesis/tex/bibliography.tex
+++ b/thesis/tex/bibliography.tex
@@ -8,6 +8,6 @@ WNT, 2001.
 AIPS Conference, 1998.
 \bibitem{antlr}T.~Parr. \emph{The Definitive ANTLR Reference. Building Domain-Specific Languages}. 
 The Pragmatic Bookshelf, 2007.
-
+\bibitem{eclipseplugins}E.~Clayberg, D.~Rubel. \emph{Eclipse Plug-Ins (3 ed.)}. Addison-Wesley Professional, 2008. 
 
 \end{thebibliography}
