[247] Chapter 5 Architektura systemu fixes

--- a/thesis/tex/architecture.tex
+++ b/thesis/tex/architecture.tex
@@ -1,73 +1,79 @@
 \chapter{Architektura systemu}
 \section{Podział na projekty Eclipse}
-\JP{Tu jakiś schemat czy coś, bo jak się czyta te opisy dalej, to można się nieźle pogubić}
 
-Ze względu na złożoność oraz zakres wymagań projekt GUI4PDDL podzielono na 6 głównych podprojektów związanych z rozwojem wtyczki oraz 2 dodatkowych, standardowych projektów \textit{Eclipse}, służących do testowania istniejących rozwiązań. Taka struktura pozwala na logiczne oddzielenie implementacji wtyczki od kodu, odpowiedzialnego za jej testowanie i integrację z \emph{Eclipse}. Pozwala to zmniejszyć rozmiar plików pobieranych przy instalacji przez użytkownika, zwłaszcza dodatkowych bibliotek.
+\JP{PPR Tu jakiś schemat czy coś, bo jak się czyta te opisy dalej, to można się nieźle pogubić}
 
-Zgodnie z konwencją nazewniczą pakietów języka \textit{Java}, wszystkie główne projekty mają przedrostek \texttt{pl.poznan.put.cs.gui4pddl}, natomiast w pozostałych obowiązują dowolne nazwy. Dokładna struktura i opis poszczególnych projektów przedstawione są poniżej.
+Ze względu na złożoność oraz zakres wymagań projekt GUI4PDDL podzielono na 6 głównych podprojektów związanych z rozwojem wtyczki oraz 2 dodatkowe, standardowe projekty \emph{Eclipse}, służące do testowania istniejących rozwiązań. Taka struktura pozwala na logiczne oddzielenie implementacji wtyczki od kodu, odpowiedzialnego za jej testowanie i integrację z \emph{Eclipse}. Pozwala to zmniejszyć rozmiar plików pobieranych przy instalacji przez użytkownika, zwłaszcza dodatkowych bibliotek.
 
-\JP{We wszystkich wypunktowaniach w tym rozdziale zamiast ,,\textbf{\texttt{blah}} -- blah'' powinno być ,,\textbf{\texttt{blah}} Blah'' (proszę zwrócić uwagę na wielką literę!). Przy nazwach bibliotek i/lub narzędzi powinny pojawić się odpowiednie przypisy z linkami do stron.}
+Zgodnie z konwencją nazewniczą pakietów języka Java, wszystkie główne projekty mają przedrostek \texttt{pl.poznan.put.cs.gui4pddl}, natomiast w pozostałych obowiązują dowolne nazwy. Dokładna struktura i opis poszczególnych projektów przedstawiono poniżej.
+
+\JP{PPR We wszystkich wypunktowaniach w tym rozdziale zamiast ,,\textbf{\texttt{blah}} -- blah'' powinno być ,,\textbf{\texttt{blah}} Blah'' (proszę zwrócić uwagę na wielką literę!). Przy nazwach bibliotek i/lub narzędzi powinny pojawić się odpowiednie przypisy z linkami do stron.}
 Projekty główne:
-\begin{itemize}
-\item \textbf{\texttt{pl.poznan.put.cs.gui4pddl}} -- projekt zawierający pełną implementację wtyczki (wersję instalacyjną). Składa się z pakietów odpowiedzialnych za logikę biznesową oraz wszystkie istniejące widoki. Szerszy opis tego projektu znajduje się w rozdziale~\ref{sec:struktura}.
-\item \textbf{\texttt{pl.poznan.put.cs.gui4pddl.antlr}} -- projekt zawierający bibliotekę \textit{ANTLR Runtime}, niezbędną do działania analizatora składniowego \textit{PDDL}, wykonanego w narzędziu \textit{ANTLR}.
-\item \textbf{\texttt{pl.poznan.put.cs.gui4pddl.feature}} -- projekt \textit{Feature}, umożliwiający połączenie różnych wtyczek w taki sposób, by z zewnątrz były traktowane jako logiczna całość, co ułatwia zarządzanie nimi. Dodatkowo pozwala na uzupełnienie informacji dotyczących wersji, licencji, obsługiwanych systemów operacyjnych itp. Projekt tego typu wymagany jest także w procesie budowania i aktualizacji.
-
-We wtyczce GUI4PDDL grupuje podprojekty \texttt{pl.poznan.put.cs.gui4pddl}\linebreak oraz \texttt{pl.poznan.put.cs.gui4pddl.antlr}, a także udostępnia podstawowe informacje o niej.
-\item \textbf{\texttt{pl.poznan.put.cs.gui4pddl.tests}} -- projekt zawierający testy jednostkowe kodu niezwiązanego z interfejsem graficznym (z wykorzystaniem biblioteki \textit{jUnit}) oraz gramatyki formalnej, generowanej przez narzędzie \textit{ANTLR}, używanej w parserze (z wykorzystaniem biblioteki \textit{gUnit})\JP{polski odpowiednik słowa parser}. Oddzielenie testów od kodu głównego projektu pozwoliło na zmniejszenie wielkości wersji instalacyjnej oraz zredukowanie zależności od dodatkowych bibliotek.
-\item \textbf{\texttt{pl.poznan.put.cs.gui4pddl.uitests}} -- projekt zawierający testy jednostkowe interfejsu graficznego, z wykorzystaniem biblioteki \textit{SWTBot}. Biblioteka ta umożliwia przeprowadzenie automatycznych testów akceptacyjnych GUI, stworzonego przy pomocy biblioteki \textit{SWT}.
-\item \textbf{\texttt{pl.poznan.put.cs.gui4pddl.update}} -- projekt typu \textit{Update site}, zawierający statyczne pliki, które mogą być umieszczone w określonym miejscu na serwerze. Użytkownicy, korzystając z adresu do tego miejsca mogą pobrać i zainstalować wtyczkę poprzez menedżer aktualizacji. Projekt ten korzysta z wcześniej zdefiniowanego projektu \textit{Feature} oraz zawiera opis wtyczki i kategorię wyświetlone następnie przy instalacji.
-\end{itemize}
+\begin{description}
+\item [\texttt{pl.poznan.put.cs.gui4pddl}] Projekt zawierający pełną implementację wtyczki (wersję instalacyjną). Składa się z pakietów odpowiedzialnych za logikę biznesową oraz wszystkie istniejące widoki. Szerszy opis tego projektu znajduje się w rozdziale~\ref{sec:struktura}.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.antlr}] Projekt zawierający bibliotekę \emph{ANTLR Runtime}, niezbędną do działania analizatora składniowego PDDL, wykonanego w narzędziu \emph{ANTLR}\footnote{http://www.antlr.org/}.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.feature}] Projekt \emph{Feature}\footnote{http://help.eclipse.org/juno/topic/org.eclipse.pde.doc.user/concepts/feature.htm?cp=4\_1\_1}, umożliwiający połączenie różnych wtyczek w taki sposób, by z zewnątrz były traktowane jako logiczna całość, co ułatwia zarządzanie nimi. Dodatkowo pozwala na uzupełnienie informacji dotyczących wersji, licencji, obsługiwanych systemów operacyjnych itp. Projekt tego typu wymagany jest także w procesie budowania i aktualizacji. We wtyczce GUI4PDDL grupuje podprojekty \texttt{pl.poznan.put.cs.gui4pddl} oraz \texttt{pl.poznan.put.cs.gui4pddl.antlr}, a także udostępnia podstawowe informacje o niej.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.tests}] Projekt zawierający testy jednostkowe kodu niezwiązanego z interfejsem graficznym (z wykorzystaniem biblioteki \emph{JUnit}\footnote{http://junit.org/}) oraz gramatyki formalnej, generowanej przez narzędzie \emph{ANTLR}, używanej w analizatorze składniowym (z wykorzystaniem biblioteki \emph{gUnit}\footnote{http://www.antlr.org/wiki/display/ANTLR3/gUnit+-+Grammar+Unit+Testing})\JP{PPR polski odpowiednik słowa parser}. Oddzielenie testów od kodu głównego projektu pozwoliło na zmniejszenie wielkości wersji instalacyjnej oraz zredukowanie zależności od dodatkowych bibliotek.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.uitests}] Projekt zawierający testy jednostkowe interfejsu graficznego, z wykorzystaniem biblioteki \emph{SWTBot}\footnote{http://eclipse.org/swtbot/}. Biblioteka ta umożliwia przeprowadzenie automatycznych testów akceptacyjnych GUI, stworzonego przy pomocy biblioteki \emph{SWT}\footnote{http://eclipse.org/swt/}.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.update}] Projekt typu \emph{Update site}\footnote{http://help.eclipse.org/juno/topic/org.eclipse.pde.doc.user/concepts/update\_site.htm?cp=4\_1\_6}, zawierający statyczne pliki, które mogą być umieszczone w określonym miejscu na serwerze. Użytkownicy, korzystając z adresu do tego miejsca mogą pobrać i zainstalować wtyczkę poprzez menedżer aktualizacji. Projekt ten korzysta z wcześniej zdefiniowanego projektu \emph{Feature} oraz zawiera opis wtyczki i kategorię, wyświetlone następnie przy instalacji.
+\end{description}
 
 Pozostałe projekty:
-\begin{itemize}
-\item \textbf{\texttt{RubikCube}} -- przykładowy projekt \textit{PDDL} wykorzystywany podczas rozwijania wtyczki. Zawiera zadanie automatycznego planowania, które z racji swojego charakteru oraz używanego plannera wykonywało się przez znaczny czas, co było pomocne podczas testowania przerywania procesu planowania (roz. \ref{subsec:przerywanie}).
-\item \textbf{\texttt{WorldOfBlocks}} -- przykładowy projekt \textit{PDDL} wykorzystywany podczas rozwijania wtyczki. Zawiera zadanie automatycznego planowania, które z racji swojego charakteru oraz używanego plannera wykonywało się przez krótki czas.
-\end{itemize}
+\begin{description}
+\item [\texttt{RubikCube}] Przykładowy projekt PDDL wykorzystywany podczas rozwijania wtyczki. Zawiera zadanie automatycznego planowania, które z racji swojego charakteru oraz używanego planera wykonywało się przez znaczny czas, co było pomocne podczas testowania przerywania procesu planowania (roz. \ref{subsec:przerywanie}).
+\item [\texttt{WorldOfBlocks}] Przykładowy projekt PDDL wykorzystywany podczas rozwijania wtyczki. Zawiera zadanie automatycznego planowania, które z racji swojego charakteru oraz używanego planera wykonywało się przez krótki czas.
+\end{description}
 
 \section{Struktura wtyczki}
 \label{sec:struktura}
 
-Kod głównego projektu wtyczki GUI4PDDL (\texttt{pl.poznan.put.cs.gui4pddl}) podzielony jest pomiędzy szereg pakietów, których nazwy, zgodnie z konwencją przyjętą w języku \textit{Java} wskazują na zakres odpowiedzialności. Wyróżnić można kilka odrębnych grup oraz podpakiety.
+Kod głównego projektu wtyczki GUI4PDDL (\texttt{pl.poznan.put.cs.gui4pddl}) podzielony jest pomiędzy szereg pakietów, których nazwy, zgodnie z konwencją przyjętą w języku Java wskazują na zakres odpowiedzialności. Struktura projektu przedstawiona jest na rysunku~\ref{fig:packets_scheme}. Wyróżnić można kilka odrębnych grup oraz podpakiety.
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=\textwidth]{img/packets_scheme}
+    \caption{Struktura pakietów. Strzałki wskazują na elementy znajdujące się na niższym poziomie w hierarchii pakietów.}
+    \label{fig:packets_scheme}
+\end{figure}
+
+\begin{description}
+\item [\texttt{pl.poznan.put.cs.gui4pddl}] Podstawowy pakiet projektu, zawierający implementację (klasa \texttt{Activator}) klasy \texttt{Plugin}, którą musi implementować każda wtyczka platformy \emph{Eclipse}. Klasa ta odpowiada za cykl życia (inicjalizacja, zakończenie) projektu. W pakiecie tym znajdują się również współdzielone stałe, definicja natury PDDL (roz. \textbf{ROZDZIAŁ}) oraz klasy pomocnicze, służące do tworzenia nowego projektu i przechowywania obrazów, wykorzystywanych we wtyczce.\JP{Brakuje odnośnika i ja nadal nie wiem co to jest natura PDDL i czy mój PDDL też ją ma; PPR  ponadto nie wiem co to jest magazyn obrazów?}
+\item [\texttt{pl.poznan.put.cs.gui4pddl.codecompletion}] Pakiet zawierający klasy odpowiedzialne za zarządzanie podpowiadaniem składni, w tym za tworzenie prawidłowych propozycji uzupełniania kodu.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.codemodel}] Pakiet zawierający klasy wchodzące w skład indeksu kodu (roz~\ref{subsec:indeks}), czyli modelu struktur PDDL. Znajdują się tam klasy reprezentujące m.in. akcje, predykaty, problemy i dziedziny.\JP{PPR ale co to jest indeks kodu?}
+\item [\texttt{pl.poznan.put.cs.gui4pddl.editor}] Pakiet zawierający implementację edytora tekstowego oraz wszystkich jego funkcjonalności: kolorowania i podpowiadania składni, dopasowywania nawiasów, automatycznych wcięć.
 \begin{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl} -- podstawowy pakiet projektu, zawierający implementację (klasa \textit{Activator}) klasy \textit{Plugin}, którą musi implementować każda wtyczka platformy \textit{Eclipse}. Klasa ta odpowiada za cykl życia (inicjalizacja, zakończenie) projektu. W pakiecie tym znajdują się również stałe, współdzielone pomiędzy pakietami, definicja natury \textit{PDDL} (roz. \textbf{ROZDZIAŁ}), klasa magazynu obrazów (\textit{ImageCache}) oraz metod pomocnych przy tworzeniu nowego projektu.\JP{Brakuje odnośnika i ja nadal nie wiem co to jest natura PDDL i czy mój PDDL też ją ma; ponadto nie wiem co to jest magazyn obrazów?}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{codecompletion}} -- zawiera klasy odpowiedzialne za zarządzanie podpowiadaniem składni, w tym za tworzenie prawidłowych propozycji uzupełniania kodu.
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{codemodel}} -- zawiera klasy wchodzące w skład indeksu kodu, czyli modelu struktur \textit{PDDL}. Znajdują się tam klasy reprezentujące m.in. akcje, predykaty, problemy i domeny.\JP{ale co to jest indeks kodu?}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{editor}} -- zawiera implementację edytora tekstowego oraz wszystkich jego funkcjonalności: kolorowania i podpowiadania składni, dopasowywania nawiasów, automatycznych wcięć.
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.editor.scanners}} Pakiet zawierający detektory słów kluczowych oraz elementów składniowych języka, które są wykorzystywane na etapie kolorowania i podpowiadania składni.
+\end{itemize}
+\item [\texttt{pl.poznan.put.cs.gui4pddl.log}] Pakiet zawierający klasę \texttt{Log}, wykorzystywaną jako mechanizm prostego zgłaszania wyjątków w czasie działania wtyczki. Wyjątki te są widoczne w widoku \textit{Error Log} platformy Eclipse.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.parser}] Pakiet zawierający pliki z opisami gramatyk, wykorzystanych do budowy analizatora kodu PDDL oraz klasy pomocnicze.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.perspective}] Pakiet zawierający definicję perspektywy\footnote{http://help.eclipse.org/juno/topic/org.eclipse.platform.doc.user/concepts/concepts-4.htm?cp=0\_2\_2} PDDL, czyli widocznego układu widoków podczas edycji plików PDDL. Charakterystycznymi elementami tej perspektywy są: przeglądarka projektów (ang. \textit{Project Explorer}), edytor plików oraz przeglądarka planów (ang. \textit{Plan Browser}; roz.~\ref{subsec:uruchamianie}).
+\item [\texttt{pl.poznan.put.cs.gui4pddl.planview}] Pakiet związany z implementacją przeglądarki planów.
 \begin{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{editor.scanners}} -- zawiera detektory słów kluczowych oraz elementów składniowych języka, które są wykorzystywane na etapie kolorowania i podpowiadania składni.
-\end{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{log}} -- zawiera klasę \textit{Log}, wykorzystywaną jako mechanizm prostego zgłaszania wyjątków w czasie działania wtyczki. Wyjątki te są widoczne w widoku \textit{Error Log} platformy Eclipse.
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{parser}} -- zawiera pliki z opisami gramatyk, wykorzystanych do budowy analizatora kodu \textit{PDDL} oraz klasy pomocnicze.
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{perspective}} -- zawiera definicję perspektywy \textit{PDDL}, czyli widocznego układu widoków podczas edycji plików \textit{PDDL}. Charakterystycznymi elementami tej perspektywy są: przeglądarka projektów (ang. \textit{Project Explorer}), edytor plików oraz standardowo widoczna przeglądarka planów (ang. \textit{Plan Browser}).
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{planview}} -- pakiet związany z implementacją przeglądarki planów (\textit{Plan Browser}).
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.planview.helpers}} Pakiet zawierający klasy pomocnicze, służące do wyświetlania planów w zewnętrznym edytorze oraz uruchamiania systemowej przeglądarki plików, a także przetwarzania wzorca regularnego nazwy planu, zdefiniowanego w preferencjach planera (roz.~\ref{subsec:konfiguracja}).
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.planview.model}} Pakiet zawierający klasę modelu danych, wykorzystywaną w przeglądarce planów.
 \begin{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{planview.helpers}} -- zawiera klasy pomocnicze, służące do wyświetlania planów w zewnętrznym edytorze oraz uruchamiania systemowej przeglądarki plików, a także przetwarzania wzorca regularnego nazwy planu, zdefiniowanego w preferencjach plannera (roz.~\ref{subsec:konfiguracja}).
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{planview.model}} -- zawiera klasę modelu danych, wykorzystywanych w przeglądarce planów.
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.planview.model.manager}} Pakiet zawierający klasy zarządzające danymi przeglądarki planów. Umożliwiają zapisanie oraz wczytywanie danych z pliku XML oraz dodawanie i usuwanie elementów z jednoczesną aktualizacją widoku przeglądarki.\JP{PPR Co to jest zarządca danych? Chodzi o Contorller z MVC czy o kogoś podobnego do zarządcy nieruchomości?}
+\end{itemize}
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.planview.ui}} Pakiet zawierający pełną implementację widoku przeglądarki planów.
+\end{itemize}
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.preferences}} Pakiet zawierający implementację widoków standardowych stron preferencji wtyczki, tzn. takich, które korzystają z API \emph{Preferences}\footnote{http://help.eclipse.org/kepler/topic/org.eclipse.platform.doc.isv/guide/preferences\_prefs.htm?cp=2\_0\_4\_3}. Są to preferencje ogólne, edytora oraz planera, dostępne z menu głównego \textit{Window} pod elementem \textit{Preferences}.
 \begin{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{planview.model.manager}} -- zawiera klasy zarządcy danych przeglądarki planów, który umożliwia zapisanie oraz wczytywanie danych z pliku \textit{XML} oraz dodawanie i usuwanie elementów z jednoczesną aktualizacją widoku przeglądarki.\JP{Co to jest zarządca danych? Chodzi o Contorller z MVC czy o kogoś podobnego do zarządcy nieruchomości?}
-\end{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{planview.ui}} -- zawiera pełną implementację widoku przeglądarki planów.
-\end{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{preferences}} -- zawiera implementację widoków standardowych stron preferencji wtyczki, tzn. takich, które korzystają z \textit{API Preferences}. Są to preferencje ogólne, edytora oraz plannera, dostępne z menu głównego \textit{Window} pod elementem \textit{Preferences}.
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.preferences.model}} Pakiet zawierający klasę modelu danych preferencji planera.
 \begin{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{preferences.model}} -- zawiera klasę modelu danych preferencji plannera.
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.preferences.model.manager}} Pakiet zawierający klasę zarządzającą danymi preferencji planera. Pozwala na zapis i odczyt danych z pliku w formacie XML.
+\end{itemize}
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.preferences.ui}} Pakiet zawierający implementację niestandardowych widoków preferencji, tzn. takich, które nie korzystają z API \emph{Preferences} -- widok preferencji planera oraz jego okna dialogowe.
+\end{itemize}
+\item [\texttt{pl.poznan.put.cs.gui4pddl.runners}] Pakiet zawierający klasy odpowiedzialne za wywołanie planera (roz.~\ref{subsec:uruchamianie}), od momentu wciśnięcia przycisku \textit{Run}, poprzez stworzenie nowej konfiguracji uruchamiania, aż do inicjalizacji procesu zewnętrznego narzędzia. W pakiecie tym znajduje się także implementacja przerywania procesu znajdowania planu opisana w rozdziale~\ref{subsec:przerywanie}.
 \begin{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{preferences.model.manager}} -- zawiera klasę zarządcy danych preferencji plannera. Pozwala na zapis i odczyt danych z pliku w formacie \textit{XML}.
-\end{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{preferences.ui}} -- zawiera implementację niestandardowych widoków preferencji, tzn. takich, które nie korzystają z \textit{API} \textit{Preferences}: widok preferencji plannera oraz jego okna dialogowe.
-\end{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{runners}} -- zawiera klasy odpowiedzialne za wywołanie plannera, od momentu wciśnięcia przycisku \textit{Run}, poprzez stworzenie nowej konfiguracji uruchamiania, aż do inicjalizacji procesu zewnętrznego narzędzia. W pakiecie tym znajduje się także implementacja przerywania procesu znajdowania planu opisana w rozdziale~\ref{subsec:przerywanie}.
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.runners.helpers}} Pakiet zawierający pomocniczą klasę metod, wykorzystywanych podczas uruchamiania planera. Funkcje te odpowiadają m.in. za przetwarzanie ścieżek do plików projektu oraz tworzenie drzewa katalogów dla wyników procesu planowania. \JP{PPR um... powstrzymam się od suchego dowcipu, ale kompletnie nie rozumiem o co chodzi ze \emph{zwracaniem określonego rodzaju zasobów w projekci}}
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.runners.ui}} Pakiet zawierający klasy, związane z tworzeniem okna nowej konfiguracji uruchamiania, dostępnego podczas inicjalizacji zewnętrznego narzędzia lub poprzez wybranie z menu \textit{Run} elementu \textit{Run Configurations...} i przejście na zakładkę \textit{PDDL}.
 \begin{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{runners.helpers}} -- zawiera pomocniczą klasę (\textit{LaunchUtil}) statycznych metod, związanych głównie ze zwracaniem określonego rodzaju zasobów w projekcie.\JP{um... powstrzymam się od suchego dowcipu, ale kompletnie nie rozumiem o co chodzi ze \emph{zwracaniem określonego rodzaju zasobów w projekci}}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{runners.ui}} -- zawiera klasy, związane z tworzeniem okna nowej konfiguracji uruchamiania, dostępnego podczas inicjalizacji zewnętrznego narzędzia lub poprzez wybranie z menu \textit{Run} elementu \textit{Run Configurations...} i przejście na zakładkę \textit{PDDL}.
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.runners.ui.blocks}} Pakiet zawierający klasy odpowiedzialne za elementy widoku okna nowej konfiguracji uruchamiania.\JP{PPR Jakie bloki? Takie jak na Ratajach?}
+\end{itemize}
+\end{itemize}
+\item [\texttt{pl.poznan.put.cs.gui4pddl.wizards}] Pakiet związany z implementacją dostępnych we wtyczce kreatorów.
 \begin{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{runners.ui.blocks}} -- zawiera klasy odpowiedzialne za elementy widoku (bloki) okna nowej konfiguracji uruchamiania.\JP{Jakie bloki? Takie jak na Ratajach?}
+\item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.wizards.ui}} Pakiet zawierający implementację kreatorów tworzenia nowego projektu PDDL oraz nowego pliku dziedziny lub problemu.
 \end{itemize}
-\end{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{wizards}} -- pakiet związany z implementacją dostępnych we wtyczce kreatorów.
-\begin{itemize}
-\item \texttt{pl.poznan.put.cs.gui4pddl.\textbf{wizards.ui}} -- zawiera implementację kreatorów tworzenia nowego projektu \textit{PDDL} oraz nowego pliku dziedziny lub problemu.
-\end{itemize}
-\end{itemize}
+\end{description}
