--- a/thesis/tex/tests.tex
+++ b/thesis/tex/tests.tex
@@ -1,20 +1,21 @@
 \chapter{Testy}
 \section{Testy jednostkowe kodu}
-Aby wykryć i naprawić błędy, które znalazły się w kodzie projektu, wykonano\JP{przygotowano?} testy jednostkowe. Do wykonania testów użyto narzędzie \textit{JUnit }dostępne w środowisku programistycznym \textit{Eclipse}. Dodatkowo, aby sprawdzić pokrycie kodu testami, wykorzystano oprogramowanie \textit{Emma}. Narzędzie to służyło tylko i wyłącznie do w celach pomocniczych i nie stanowiło podstaw do zbierania informacji badawczych.\JP{ee?}
 
-Podczas prac nad projektem GUI4PDDL przetestowane zostały widoki oraz parser\JP{mam zastrzeżenia do tego słowa, proszę poszukać polskiego odpowiednika}. Testy pierwszego z dwóch wymienionych elementów polegały na prostym porównywaniu oczekiwanego stanu z stanem obecnym, za pomocą funkcji \textit{assertEquals}, która to należy do pakietu narzędzi \textit{JUnit}. Przykładowy, pojedynczy test przedstawiono \JP{w przykładzie \ldots} poniżej:\\\\
-\JP{Może by to blablalbalksadfj czymś zastąpić?}
+Aby wykryć i naprawić błędy, które znalazły się w kodzie projektu, przygotowano testy jednostkowe. Do wykonania testów użyto narzędzie \textit{JUnit }dostępne w środowisku programistycznym \textit{Eclipse}. Dodatkowo, aby sprawdzić pokrycie kodu testami, wykorzystano oprogramowanie \textit{Emma}.
+
+Podczas prac nad projektem GUI4PDDL przetestowane zostały widoki oraz analizator składniowy. Testy pierwszego z dwóch wymienionych elementów polegały na prostym porównywaniu oczekiwanego stanu z stanem obecnym, za pomocą funkcji \textit{assertEquals}, która to należy do pakietu narzędzi \textit{JUnit}. Przykładowy, pojedynczy test przedstawiono w przykładzie \ref{test_jednostkowy}.\\\\
 \begin{Code}
-\begin{lstlisting}[language=JAVA,frame=single,label=ana_code, caption=Przykładowy test jedostkowy]
+\begin{lstlisting}[language=JAVA,frame=single,label={test_jednostkowy}, caption={Przykładowy test jedostkowy}]
 	@Test
 	public void testGetRegexWithReplacementsAtBegin() {
 		
 		assertEquals(FileNameRegexProcessor.getRegexWithReplacements(
-			"-project_name-blablalbalksadfj", "-project_name-", 
-			"project-name"), "project-nameblablalbalksadfj");
+			"-project_name-projekt", "-project_name-", 
+			"project-name"), "project-nameprojekt");
 	}
 \end{lstlisting}
 \end{Code}
+
 
 Testowanie parsera polegało przede wszystkim na sprawdzeniu poprawności działania indeksowania poszczególnych elementów języka PDDL. Pierwszą czynnością jaką należało wykonać było wczytanie przykładowego pliku zawierajace go przykładową domenę. Następnie indeksowano plik za pomocą napisanej funkcji, dzięki czemu otrzymywano obiekt zawierający domenę wraz z jej zawartością. Dalej, tworzono pusty obiekt domeny, do którego kolejnymi instrukcjami oraz funkcjami dostarczonymi przez klasę, dołączano elementy znajdujące się w pliku. Porównanie tych dwóch obiektów zapewniało kompletną informację o działaniu indeksera.
 
@@ -22,15 +23,15 @@ Oprócz wyżej wymienionych testów, stworzono również badania pojedynczych fu
 
 Testy jednostkowe wykryły kilka pomniejszych błędów, które należało usunąć. Spowodowane były one niepoprawnym indeksowaniem niektórych elementów języka PDDL. Przykładowo, testów nie przechodził kod, w którym zdefiniowano akcję zawierającą dyrektywę \textit{forall}.
 \section{Testy jednostkowe gramatyk formalnych}
-Oprócz standardowych testów jednostkowych, wymagane było przetestowanie gramatyki formalnej zawartej w projekcie GUI4PDDL. Jednym z sposobów przeprowadzenia testów jest wykorzystanie narzędzia \textit{GUnit}\JP{W którymś rozdziale wcześniej widziałem zapis gUnit, proszę uspójnić}. Jest to specjalna platforma, wyspecjalizowana w tworzeniu testów gramatyk. Dzięki wbudowanym funkcjom \textit{GUnit} zmienia każdy z testów w instancje testu \textit{JUnit}, który następnie wykonywany jest standardowo przez odpowiedzialne narzędzie.
+Oprócz standardowych testów jednostkowych, wymagane było przetestowanie gramatyki formalnej zawartej w projekcie GUI4PDDL. Jednym z sposobów przeprowadzenia testów jest wykorzystanie narzędzia \textit{GUnit}. Jest to specjalna platforma, wyspecjalizowana w tworzeniu testów gramatyk. Dzięki wbudowanym funkcjom \textit{GUnit} zmienia każdy z testów w instancje testu \textit{JUnit}, który następnie wykonywany jest standardowo przez odpowiedzialne narzędzie.
 
-Aby testy gramatyki były kompletne, należało przetestować wszystkie zdefiniowane elementy języka PDDL. Opisano wypisano je w podrozdziale 2, rozdziału 2\JP{proszę pisać: rozdziale 2.2 i korzystać przy tym z polecenia $\backslash$ref}. Są to między innymi akcje, wymagania, czy cele. W projekcie GUI4PDDL definicja gramatyki formalnej jest jednym z ważniejszych elementów, więc to dla niej przeznaczoną większą część testów.
+Aby testy gramatyki były kompletne, należało przetestować wszystkie zdefiniowane elementy języka PDDL. Opisano je w rozdziale \ref{sec:jezykpddl}. Są to między innymi akcje, wymagania, czy cele. W projekcie GUI4PDDL definicja gramatyki formalnej jest jednym z ważniejszych elementów, więc to dla niej przeznaczoną większą część testów.
 
-Przykład 6.2\JP{$\backslash$ref} przedstawia fagment gramatyki formalnej.
+Przykład \ref{gramatyka_formalna} przedstawia fagment gramatyki formalnej.
 
 
 \begin{Code}
-\begin{lstlisting}[language=LISP,frame=single,label=ana_code, caption=Fragment gramatyki formalnej]
+\begin{lstlisting}[language=LISP,frame=single,label={gramatyka_formalna}, caption={Fragment gramatyki formalnej}]
 action_def 
 	:	'(' ':action' NAME
 			':parameters' '(' typed_list_of_variable ')'
@@ -41,7 +42,7 @@ action_def
 \end{Code}
 
 \begin{Code}
-\begin{lstlisting}[language=LISP,frame=single,label=ana_code, caption=Przykładowe testy dla przykładu 6.2]
+\begin{lstlisting}[language=LISP,frame=single,label={test_gramatyki}, caption={Przykładowe testy dla przykładu \ref{gramatyka_formalna}}]
 <<
 (:action load
         :parameters (?e - engine ?c - car ?t - town ?x - cargo)
