zmiana słownictwa parser-analizator składniowy

--- a/thesis/tex/tests.tex
+++ b/thesis/tex/tests.tex
@@ -17,7 +17,7 @@ Podczas prac nad projektem GUI4PDDL przetestowane zostały widoki oraz analizato
 \end{Code}
 
 
-Testowanie parsera polegało przede wszystkim na sprawdzeniu poprawności działania indeksowania poszczególnych elementów języka PDDL. Pierwszą czynnością jaką należało wykonać było wczytanie przykładowego pliku zawierajace go przykładową domenę. Następnie indeksowano plik za pomocą napisanej funkcji, dzięki czemu otrzymywano obiekt zawierający domenę wraz z jej zawartością. Dalej, tworzono pusty obiekt domeny, do którego kolejnymi instrukcjami oraz funkcjami dostarczonymi przez klasę, dołączano elementy znajdujące się w pliku. Porównanie tych dwóch obiektów zapewniało kompletną informację o działaniu indeksera.
+Testowanie analizatora składniowego polegało, przede wszystkim, na sprawdzeniu poprawności działania indeksowania poszczególnych elementów języka PDDL. Pierwszą czynnością jaką należało wykonać było wczytanie przykładowego pliku zawierajace go przykładową domenę. Następnie indeksowano plik za pomocą napisanej funkcji, dzięki czemu otrzymywano obiekt zawierający domenę wraz z jej zawartością. Dalej, tworzono pusty obiekt domeny, do którego kolejnymi instrukcjami oraz funkcjami dostarczonymi przez klasę, dołączano elementy znajdujące się w pliku. Porównanie tych dwóch obiektów zapewniało kompletną informację o działaniu indeksera.
 
 Oprócz wyżej wymienionych testów, stworzono również badania pojedynczych funkcji znajdujących się w różnych miejscach kodu.
 
