zmiana słownictwa parser-analizator składniowy

--- a/thesis/tex/intro.tex
+++ b/thesis/tex/intro.tex
@@ -16,7 +16,7 @@ W pierwszej części drugiego rozdziału, przedstawiona została problematyka au
 
 Kolejny rozdział to opis wymagań funkcjonalnych oraz wymagań pozafunkcjonalnych.
 
-Rozdział czwarty podzielony jest na dwie części. W pierwszej z nich opisane jest środowisko programistyczne Eclipse, w którym stworzona została wtyczka GUI4PDDL. Jest to również środowisko, na którym docelowo ma działać stworzony projekt. W drugiej części opisany został generator parserów ANTLR.
+Rozdział czwarty podzielony jest na dwie części. W pierwszej z nich opisane jest środowisko programistyczne Eclipse, w którym stworzona została wtyczka GUI4PDDL. Jest to również środowisko, na którym docelowo ma działać stworzony projekt. W drugiej części opisany został generator analizatorów składniowych ANTLR.
 
 W rozdziale piątym przedstawiono podział całego projektu na mniejsze projekty Eclipse. Opisana jest tu również szczegółowa zawartość każdej osobnej wtyczki.
 
