--- a/thesis/tex/implementation.tex
+++ b/thesis/tex/implementation.tex
@@ -315,72 +315,66 @@ W narzędziu GUI4PDDL zaimplementowane zostało podpowiadanie:
 \end{itemize}
 
 \section{Edytor}
-\JP{Do obrazków w tym rozdziale muszą być odniesienia w tekście, bo inaczej nie wiadomo co one ilustrują.}
 Edytor kodu we wtyczce GUI4PDDL zajmuje się kolorowaniem kodu, dopasowywaniem nawiasów oraz podpowiedziami kodu. Automatyczne wcięcia zaimplementowane są domyślnie w edytorze Eclipse, tak więc po wpisaniu znaku nowej linii kursor automatycznie ustawia się w takiej odległości od lewej krawędzi, jak w poprzedniej linii kodu.
 \subsection{Kolorowanie kodu}
 \begin{figure}[h]
   \centering
-    \includegraphics{img/colored-code.png}
+    \includegraphics[width=13cm,height=7cm,keepaspectratio]{img/colored-code.png}
     \caption{Pokolorowany kod PDDL}
     \label{ana_structure}
 \end{figure}
-Aby zaimplementować kolorowanie kodu, wykorzystano metody ze środowiska programistycznego Eclipse. Dokument wstępnie dzielony jest na partycje, czyli fragmenty kodu mające charakterystyczne cechy. Następnie każda partycja jest dzielona na tzw. tokeny. W GUI4PDDL kod podzielony jest na 2 partycje. Pierwsza partycja obejmuje komentarze. Klasa \texttt{PDDLPartitionScanner} znajduje fragmenty kodu rozpoczynające się od znaku ";", np.  ";testowy kometarz". Od tego znaku aż do końca linii, zgodnie z gramatyką języka PDDL, tekst traktowany jest jako komentarz.
+Aby zaimplementować kolorowanie kodu, wykorzystano metody ze środowiska programistycznego Eclipse. Dokument wstępnie dzielony jest na partycje, czyli fragmenty kodu mające charakterystyczne cechy. Następnie każda partycja jest dzielona na tzw. tokeny. W GUI4PDDL kod podzielony jest na 2 partycje. Pierwsza partycja obejmuje komentarze. Klasa \texttt{PDDLPartitionScanner} znajduje fragmenty kodu rozpoczynające się od znaku ";", np.  ";testowy kometarz". Od tego znaku aż do końca linii, zgodnie z gramatyką języka PDDL, tekst traktowany jest jako komentarz (rys.6.7).
 \begin{figure}[h]
   \centering
-    \includegraphics{img/comments.png}
+    \includegraphics[width=7cm,height=7cm,keepaspectratio]{img/comments.png}
     \caption{Komentarze są możliwe również na końcu linii}
     \label{ana_structure}
 \end{figure}
-Pozostałe fragmenty kodu poddawane są dalszej analizie. Klasa \texttt{DefaultScanner} zawiera listę słów kluczowych oraz definicje tokenów i reguł. Reguły wywoływane są w specjalnej kolejności, by wykluczyć błędne dopasowanie kodu do tokena. Pierwsza reguła szuka słów kluczowych zaczynających się znakiem ":".  Od tego znaku, aż do końca słowa (dopuszczalny myślnik) tekst przyrównywany jest do listy słów kluczowych. Jeśli słowo znajduje się na liście, fragment kodu oznaczony jest tokenem valueToken\JP{nazwy tokenów też powinny być złożone inną czcionką: może pochyloną, może o stałej szerokości}.
- W przeciwnym wypadku edytor "cofa się" na początek analizowanego kodu i klasa DefaultScanner wywołuje kolejną regułę. Następna metoda znajduje fragmenty kodu rozpoczynające się na znak "?".  Podobnie jak w przypadku pierwszej reguły, skaner odczytuje kolejne litery lub cyfry (dopuszczalne znaki specjalne to kropka oraz myślnik). Taki fragment oznaczony jest jako zmienna w języku PDDL. Tekst otrzymuje token variableToken.
+Pozostałe fragmenty kodu poddawane są dalszej analizie. Klasa \texttt{DefaultScanner} zawiera listę słów kluczowych oraz definicje tokenów i reguł. Reguły wywoływane są w specjalnej kolejności, by wykluczyć błędne dopasowanie kodu do tokena. Pierwsza reguła szuka słów kluczowych zaczynających się znakiem ":".  Od tego znaku, aż do końca słowa (dopuszczalny myślnik) tekst przyrównywany jest do listy słów kluczowych. Jeśli słowo znajduje się na liście, fragment kodu oznaczony jest tokenem valueToken (rys. 6.8).
+
 \begin{figure}[h]
   \centering
-    \includegraphics{img/values-color.png}
+    \includegraphics[width=7cm,height=7cm,keepaspectratio]{img/values-color.png}
     \caption{Słowa kluczowe oznaczone tokenem valueToken}
     \label{ana_structure}
 \end{figure}
+
+ W przeciwnym wypadku edytor "cofa się" na początek analizowanego kodu i klasa \texttt{DefaultScanner} wywołuje kolejną regułę. Następna metoda znajduje fragmenty kodu rozpoczynające się na znak "?".  Podobnie jak w przypadku pierwszej reguły, skaner odczytuje kolejne litery lub cyfry (dopuszczalne znaki specjalne to kropka oraz myślnik). Taki fragment oznaczony jest jako zmienna w języku PDDL. Tekst otrzymuje token variableToken (rys. 6.9).
+
 \begin{figure}[h]
   \centering
-    \includegraphics{img/variable-color.png}
+    \includegraphics[width=7cm,height=7cm,keepaspectratio]{img/variable-color.png}
     \caption{Słowa kluczowe oznaczone tokenem variableToken}
     \label{ana_structure}
 \end{figure}
+
+Kolejna reguła wyszukuje stałe słowa, takie jak np. define. Metoda ta działa identycznie, jak w przypadku \emph{valueRule}. Fragment kodu dopasowany jest do listy słów kluczowych z listy keywords. Elementy pasujące do reguły otrzymują token keywordToken. Reguła dotycząca nawiasów to \emph{BracketRule}. Ponieważ w języku PDDL nie dopuszcza się znaków "(" oraz ")" w nazwach zmiennych, ani słowach kluczowych, BracketRule analizuje znaki szukając nawiasów okrągłych. Znaki te otrzymują token bracketToken (rys 6.10).
+
 \begin{figure}[h]
   \centering
-    \includegraphics{img/bracket-color.png}
+    \includegraphics[width=7cm,height=7cm,keepaspectratio]{img/bracket-color.png}
     \caption{Nawiasy oznaczone tokenem bracketToken}
     \label{ana_structure}
 \end{figure}
-Kolejna reguła wyszukuje stałe słowa, takie jak np. define. Metoda ta działa identycznie, jak w przypadku valueRule. Fragment kodu dopasowany jest do listy słów kluczowych z listy keywords. Elementy pasujące do reguły otrzymują token keywordToken. Reguła dotycząca nawiasów to BracketRule. Ponieważ w języku PDDL nie dopuszcza się znaków \texttt{(} oraz \texttt{)} w nazwach zmiennych, ani słowach kluczowych, BracketRule analizuje znaki szukając nawiasów okrągłych. Znaki te otrzymują token bracketToken.
-Przedostatnia reguła znajduje wszystkie puste znaki, wykorzystując wbudowany interfejs  IWhitespaceDetector oraz metodę \texttt{isWhitespace()} klasy \texttt{Character}. Jeśli fragment kodu nie został oznaczony żadnym tokenem, otrzymuje token domyślny.  Po podziale kodu na tokeny, środowisko Eclipse używając wbudowanych metod, koloruje tokeny na kolory ustalone przez użytkownika w ustawieniach, bądź domyślne zdefiniowane w klasie \texttt{Activator}.
+
+Przedostatnia reguła znajduje wszystkie puste znaki, wykorzystując wbudowany interfejs  IWhitespaceDetector oraz metodę klasy Character - isWhitespace(). Jeśli fragment kodu nie dostał żadnego tokenu, otrzymuje token domyślny.  Po podziale kodu na tokeny, środowisko Eclipse używając wbudowanych metod, koloruje tokeny na kolory ustalone przez użytkownika w ustawieniach, bądź domyślne, zdefiniowane w klasie Activator.
 \subsection{Dopasowanie nawiasów}
 \begin{figure}[h]
   \centering
-    \includegraphics{img/matched-bracket.png}
+    \includegraphics[width=7cm,height=7cm,keepaspectratio]{img/matched-bracket.png}
     \caption{Zaznaczony nawias w parze z nawiasem spod kursora}
     \label{ana_structure}
 \end{figure}
 \begin{figure}[h]
   \centering
-    \includegraphics{img/matched-bracket-reverse.png}
+    \includegraphics[width=7cm,height=7cm,keepaspectratio]{img/matched-bracket-reverse.png}
     \caption{Zaznaczanie działa w obie strony}
     \label{ana_structure}
 \end{figure}
-Środowisko Eclipse posiada wbudowaną metodę \texttt{configureSourceViewerDecorationSupport} w klasie TextEditor. W klasie PDDLEditor zostaje ona nadpisana własną funkcją. Wykorzystano metodę setCharacterPairMatcher. Metoda ta wyszukuje rekurencyjnie kolejne pary znaków \texttt{(} oraz \texttt{)}.  W edytorze dopasowane nawiasy są sparowane, więc przy zaznaczaniu jednego znaku z pary, drugi nawias otoczony jest szarą obwódką. Dzięki temu użytkownik szybko zauważy dopasowany nawias lub jego brak.
+Środowisko Eclipse posiada wbudowaną metodę w klasie \texttt{TextEditor}, \emph{configureSourceViewerDecorationSupport}. W klasie PDDLEditor zostaje ona nadpisana własną funkcją. Wykorzystano metodę setCharacterPairMatcher. Metoda ta wyszukuje rekurencyjnie kolejne pary znaków "(" oraz ")".  W edytorze dopasowane nawiasy są sparowane, więc przy zaznaczaniu jednego znaku z pary, drugi nawias otoczony jest szarą obwódką. Dzięki temu użytkownik szybko zauważy dopasowany nawias, lub jego brak.
 \subsection{Podpowiadanie kodu}
-\begin{figure}[h]
-  \centering
-    \includegraphics{img/code-assistant1.png}
-    \caption{Przykład podpowiadania kodu po dwukropku}
-    \label{ana_structure}
-\end{figure}
-\begin{figure}[h]
-  \centering
-    \includegraphics{img/code-assistant2.png}
-    \caption{Przykład podpowiadania kodu w połowie słowa kluczowego}
-    \label{ana_structure}
-\end{figure}
-Podpowiadanie składni wywoływane jest po wpisaniu dowolnej litery, znaku ":" lub po wciśnięciu kombinacji klawiszy \texttt{ctrl}+\texttt{spacja}, czyli domyślnej kombinacja klawiszy w środowisku Eclipse wywołującej klasę \texttt{PDDLCompletionAssistant}. Klasa ta wymaga bezpośredniej współpracy z naturą wtyczki GU4PDDL\JP{Czy natura wtyczki to coś jak dusza wtyczki i dzięki niej można stwierdzić czy wtyczka jest dobra czy zła?}. Jako domyślny asystent podpowiedzi, użyto klasy \texttt{PDDLCompletionAssistant}. Zawiera ona metodę \texttt{computeCompletionsProposals()}. Na początku metoda uzyskuje dostęp do dokumentu\JP{czy to zdanie w ogóle jest potrzebne? to jest jakiś drobiazg implementacyjny mam wrażenie}. Następnie obliczana jest ilość\JP{znak są policzalne, a więc: liczba} znaków, począwszy od pozycji kursora w danym momencie\JP{dokąd? do końca dokumentu?}. Skaner tekstu przechodzi przez znaki poprzedzające kursor, aż natrafi na znak pusty, lub znak specjalny z wyłączeniem znaków ":" i "?". Wynikowy tekst jest prefixem\JP{prefiksem albo przedrostkiem, a w ogóle to prefiksem czego?}. Następnie metoda dostaje dostęp do natury projektu\JP{już mi się znudziło żartowanie o naturze}. Poprzez instancję \JP{brakuje słowa interfejsu?} IPDDLCodeCompletionManager wywoływany jest CodeComletionManager\JP{serio nazywa się Comletion? A co to w ogóle jest to CodeComletionManager? Klasa? Metoda?}. Ostatecznie metoda\JP{Jaka? Ta, od której zaczął się akapit? Jeżeli tak, to proszę się jakoś do tego odwołać.} pobiera listę propozycji utworzoną przez menedżer (o czym w innym rozdziale\JP{to nie beletrystyka, taki język nie przystoi, należy po prostu podać nr rozdziału}). Lista propozycji jest filtrowana używając\JP{przy wykorzystaniu} przygotowanego wcześniej prefixu\JP{prefiksu}. Lista wynikowa zawiera listę słów zaczynających się prefixem\JP{j.w.}. Każda propozycja z listy wyświetlona jest w oknie kontekstowym. Użytkownik następnie wybiera jedną z nich i edytor wpisuje\JP{umieszcza} propozycję tuż za kursorem.
+Podpowiadanie składni wywoływane jest po wpisaniu dowolnej litery, znaku ":" lub po wciśnięciu kombinacji klawiszy \emph{Ctrl+Space} - jest to domyślna kombinacja klawiszy w środowisku Eclipse wywołująca klasę \texttt{PDDLCompletionAssistant}. Klasa ta wymaga bezpośredniej współpracy z klasą \texttt{IPDDLNature} wtyczki GU4PDDL. Jako domyślny asystent podpowiedzi, użyto klasy \texttt{PDDLCompletionAssistant}. Zawiera ona metodę \emph{computeCompletionsProposals()}. Skaner tekstu przechodzi przez znaki poprzedzające kursor, aż natrafi na znak pusty, lub znak specjalny z wyłączeniem znaków ":" i "?". Wynikowy tekst jest prefiksem, stanowiącym podstawę do podpowiedzi. Następnie metoda dostaje dostęp do projektu. Poprzez instancję interfejsu \texttt{IPDDLCodeCompletionManager} wywoływana jest klasa \texttt{CodeCompletionManager}. Ostatecznie metoda \emph{computeCompletionsProposals()} pobiera listę propozycji utworzoną przez menedżer (rozdz. 6.2.5). Lista propozycji jest filtrowana przy wykorzystaniu przygotowanego wcześniej prefiksu. Lista wynikowa zawiera listę słów zaczynających się prefiksem. Każda propozycja z listy wyświetlona jest w oknie kontekstowym. Użytkownik następnie wybiera jedną z nich i edytor umieszcza propozycję tuż za kursorem.
+
 
 
 
