--- a/thesis/tex/bibliography.tex
+++ b/thesis/tex/bibliography.tex
@@ -29,5 +29,6 @@ AIPS Conference, 1998.
 \bibitem{antlr}T.~Parr. \emph{The Definitive ANTLR Reference. Building Domain-Specific Languages}. 
 The Pragmatic Bookshelf, 2007.
 \bibitem{eclipseplugins}E.~Clayberg, D.~Rubel. \emph{Eclipse Plug-Ins (3 ed.)}. Addison-Wesley Professional, 2008. 
-
+\bibitem{eclipseinaction}Eclipse in Action: A Guide for the Java Developer by \emph{David Gallardo}, Chapter 8,9
+\bibitem{eclipsearticle} The Architecture of Open Source Application by Kim Moir Dostępne w http://www.aosabook.org/en/eclipse.html [Dostęp: 19.01.2014]
 \end{thebibliography}
